# mr-score-follower

./: README.md  environment.yml  photon test.py  photon_test.py  pyproject.toml
app/: config.py  main.py
app/core/: helper.py  match.py  stream_processor.py
notebook/: match_test.ipynb  score_visualization.ipynb
resources/: bwv66.6.musicxml
