[tool.poetry]
name = "mr-score-follower"
version = "0.1.0"
description = ""
authors = ["jiyun.park <laurenceyoon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = "^0.19.0"
pyclean = "^2.2.0"
redis = "^4.3.4"
black = "^22.10.0"
PyAudio = "^0.2.12"
librosa = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
